[gd_scene load_steps=4 format=3 uid="uid://durdlyilqnadx"]

[ext_resource type="Script" uid="uid://c8k3qopgrrstb" path="res://scripts/pre_round_menu.gd" id="1_retyw"]

[sub_resource type="Gradient" id="Gradient_4kigq"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.097233094, 0.097233094, 0.09723308, 0.68235296)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7ah4d"]
gradient = SubResource("Gradient_4kigq")

[node name="PreRoundMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_retyw")
metadata/_edit_horizontal_guides_ = [-13.0, -12.0]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_7ah4d")

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RoundStarting" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Round Starting"
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 146
text = "3"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Background/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Start Round"

[node name="Waiting" type="Label" parent="Background/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Waiting for host"
horizontal_alignment = 1
